# 3DMolGen

./: .gitattributes  .gitignore  README.md  drugs_test_inference_.pickle  environment.yml  old-pyproject.toml  open_posebusters_pickle.ipynb  playground.ipynb  playground_conformer_LLM.ipynb  pyproject.toml  repo_structure.md  requirements.txt  requirements.yml  setup-uv.sh  setup.sh  test_codex_environment.md  tmp_attention_diag.py  verify_env.py
.claude/commands/: continue-plan.md
data/geom_drugs_test_set/: drugs_test_inference.pickle
data/inference_set_clean_smiles/: drugs_test_dict.pickle  drugs_test_smi_list.pickle
data/inference_set_corrected_smiles/: drugs_test_dict.pickle
data_processing/: 2d-topology-desc.py  3d-dist-desc.py  compare.py  decoding_from_spherical_comparison.py  desc-2d.py  desc-3d.py  gen-descriptors.py  geom_playground.ipynb  get_cartesian_from_spherical.py  get_spherical_from_cartesian.py  inverse.py  molecule.sdf  pcqm4v2_valid_indice.txt  preprocessing_forked_ET_Flow.py  sdf_to_jsonl.ipynb  spherical_to_cartesian.py
docs/: constrained_logits.md  constrained_logits_plan.md  convert_qwen3_dcp_to_hf.md  data_preprocessing_samples.md  dataloader.md  enriched_smiles.md  grpo_metrics_guide.md  grpo_reward.md  grpo_reward_metrics.md  inference_attention_investigation.md  launch_torchtitan_qwen3.md  logit_processor.md  molecular_coordinate_embedding.md  pretraining_runbook.md  python_cuda_packaging_guide.md  repo_structure.md  run_eval_optimizations.md  run_eval_proposed_optimizations_dec_2025.md  throwaway.md  wsds_scheduler.md
docs/plans/: 2025-12-01-constrained-conformer-debug-log.md  2025-12-01-constrained-conformer-smoke.md  2025-12-02-v1-baseline-fixes.md  2025-12-03-session-plan-workflow-design.md  2025-12-03-v2-precomputed-mask-design.md  PLAN.md
evaluation/: conformer.py  dataset.py  playground_conformer_LLM.ipynb
icmpy/: ConfGenerator.py  default_config.yaml
molgen3D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
molgen3D/config/: default_posebusters_config.yaml  paths.yaml  sampling_config.py
molgen3D/data_processing/: check-small-rmsd.ipynb  data_preprocessing.py  get_cartesian_from_spherical.py  get_spherical_from_cartesian.py  mol_9496-rec.sdf  mol_9496_.jsonl  preprocessing_forked_ET_Flow.py  preprocessing_forked_Torch_Diff.py  run.py  run_here.py  run_submitit.py  smiles_encoder_decoder.py  statistics_comparison.ipynb  utils.py  vis.ipynb
molgen3D/evaluation/: 3d_inference.py  compare_confs.py  covmat.py  eval_configs.py  inference.py  posebustars_check.py  posebusters_check.py  prepare_geom_test.py  process_test_dataset.py  run_eval.py  run_eval_parallel.py  utils.py
molgen3D/extra/: conformer_generation.py  dataset.py  decoding_from_spherical_comparison.py  get_cartesian_from_spherical.py  playground_conformer_LLM.ipynb
molgen3D/notebooks/: geom_playground.ipynb  playground_conformer_LLM.ipynb  playground_posebusters.ipynb  scaling_laws.ipynb  simple_lbfgs.ipynb  test_set_probe.ipynb  torsional_diff_data_playground.ipynb
molgen3D/utils/: data_processing_utils.py  sdf_to_csv.py  utils.py
molgen3D/vq_vae/: vqvae_mol_coordinates.pth
outputs/: README.md
outputs/profiles/: ANALYSIS_WITH_EVIDENCE.md  IMPLEMENTATION_PLAN_v39.md  JUNK_TOKEN_EVIDENCE.md  LLAMA_VS_QWEN_HYPOTHESIS.md  PERFETTO_GUIDE.md  README.md  SUMMARY.md  TOKENIZATION_DEEP_DIVE.md  TRACE_COMPARISON.md  compare_traces.sh  lp_operations.txt  queries.md  query_lp_ops.sql  top_30_ops_by_time.tsv
references/: posebusters_docs.md
scripts/: analyze_smoke_report.py  benchmark_inference.py  book_sess.sh  debug_tokenizer.py  debug_v2_tokenization.py  encoder_smoke_test.py  inspect_qwen3_dcp.py  install_hooks.sh  launch_torchtitan.sh  launch_torchtitan_qwen3.sh  launch_torchtitan_qwen3_sweep.sh  launch_torchtitan_test.sh  pre-commit  request_slurm_interactive_session.sh  run_constrained_smoke.py  run_constrained_smoke_v1.py  run_constrained_smoke_v1_1.py  run_constrained_smoke_v2.py  run_constrained_smoke_v2_precompute.py  run_torch_diff_preprocessing.sbatch  test_env_slurm.sh
scripts/diagnostics/: attention_diagnostic.py  benchmark_inference_attention.py  build_and_benchmark_flash_attn.sh  build_flash_attn_only.sh  submit_attention_diagnostic.sh  submit_inference_benchmark.sh
scripts/logit_processor/: analyze_smoke_report.py  compare_lp_vs_logs.py  debug_tokenization.py  lp_vs_logs_summary.json  qwen_tokenizer_probe.py  run_constrained_smoke_v2_precompute.py  run_logit_processor_smoke.py
tests/: conftest.py  grpo_reward_harness.py  test_converters.py  test_dataloader.py  test_drugs_enriched_roundtrip.py  test_icmpy.py  test_parallel_dataloader.py  test_paths_helper.py  test_smiles_encoder_decoder.py  test_wsds_scheduler.py
train/: vqvae.py
utils/: 1100140.cif  converters.py  geom_to_sdf.py  playground.ipynb
vq_vae/: playground.ipynb  train_vqvae.py
(+130 files in other folders)
