[project]
name = "molgen3D"
version = "0.1.0"
description = "3D molecular conformer generation using language models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

# =============================================================================
# CORE DEPENDENCIES
# Everything needed for training, inference, and evaluation on cluster.
# NOTE: PyTorch + Flash Attention are installed separately by setup.sh
# =============================================================================
dependencies = [
    # --- Core ML libraries ---
    "transformers>=4.50.0",
    "tokenizers>=0.20.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.0",

    # --- Pretraining (TorchTitan) ---
    "torchtitan>=0.2.0",
    "torchdata>=0.8.0",

    # --- GRPO Training (TRL) ---
    "trl>=0.15.0",
    "scipy>=1.10.0",        # linear_sum_assignment in grpo_reward_v3
    "scikit-learn>=1.0.0",  # metrics

    # --- Evaluation ---
    "posebusters>=0.4.0",

    # --- Job submission (Slurm) ---
    "submitit>=1.5.0",
    "cloudpickle>=3.0.0",

    # --- CLI / Config ---
    "tyro>=0.5.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0",

    # --- Experiment tracking ---
    "wandb>=0.15.0",
    "tensorboard>=2.10.0",

    # --- Utilities ---
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
    "loguru>=0.7.0",
    "fsspec>=2024.0.0",
    "filelock>=3.0.0",
    "packaging>=20.0",
    "typing-extensions>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Local development (testing, linting, Jupyter, extras)
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
    "einops>=0.8.0",
    "bitsandbytes>=0.40.0",
]

# Everything
all = [
    "molgen3D[dev]",
]

# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"], namespaces = false } }

[tool.setuptools.package-data]
"molgen3D.config" = ["paths.yaml"]

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
